# elysiactl

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CRUSH.md  MGIT_ELYSIA_REFERENCE.md  README.md  ROADMAP.md  THEME_CONFIGURATION.md  fixed_app.py  main.py  pyproject.toml  pytest.ini  sample_app.py  temp_app.py  test_repo_layout.py  test_syntax.py
.claude/: settings.local.json
.elysiactl/: custom_startup.txt
.github/workflows/: claude.yml
docs/: CLAUDE.md  IMPLEMENT_PHASE.md
docs/ADR/: 001-no-automatic-fixes.md  002-configuration-hierarchy.md  003-collection-naming-strategy.md  004-source-code-indexing-design.md  005-batch-processing-strategy.md
docs/specs/: collection-management.md  phase-next-extras.md
docs/specs/_completed/cluster-verification/: overview.md
docs/specs/_completed/cluster-verification/phases-done/: phase-1-fix-config-replication.md  phase-2-force-schema-replication.md  phase-3-fix-weaviate-raft-consensus.md
docs/specs/_completed/collection-management/phases-done/: phase-2-risk-mitigation.md  phase-2c-restore-basic.md
docs/specs/_completed/hardcoded-url-removal/phases-done/: phase-1-cluster-verification.md  phase-2-repair.md  phase-3-port-constants.md
docs/specs/_completed/source-code-indexing/: batch-indexing-spec.md  index-sync-specification.md  overview.md  sync-architecture.md
docs/specs/_completed/source-code-indexing/phases-done/: phase-1-enterprise-indexing-command.md  phase-1-stdin-stream-consumption.md  phase-2-checkpoint-recovery-system.md  phase-2-extract-configuration.md  phase-3-smart-content-resolution.md  phase-4-production-error-handling.md  phase-5-performance-optimization.md  phase-6-integration-testing-suite.md
docs/specs/cluster-verification/phases-done/: phase-2-force-schema-replication.md  phase-3-fix-weaviate-raft-consensus.md
docs/specs/collection-management/: collection-management.md  index_source_code.py  overview.md  phase-1-core-commands.md  phase-2-data-operations.md  prioritization-and-init.md
docs/specs/collection-management/phases-done/: ARCHIVED-phase-0-prioritization-and-init.md  phase-2a-backup-schema-only.md  phase-2b-backup-with-data.md  phase-2d-restore-enhanced.md
docs/specs/collection-management/phases-pending/: phase-1-core-commands.md  phase-2-execution-tracker.md  phase-2-implementation-plan.md  phase-2-summary.md  phase-3-advanced-features.md  phase-3-roadmap.md
docs/specs/hardcoded-url-removal/phases-pending/: phase-1-cluster-verification.md  phase-2-repair.md  phase-3-port-constants.md
docs/specs/repo-management-ux/phases-done/: foundation.md  mypy-errors-analysis.md
docs/specs/repo-management-ux/phases-pending/: README.md  consolidation-tracker.md  core-workflows-and-use-cases.md  creative-journey.md  phase-1-tui-foundations.md  phase-3-advanced-features.md  repo-management-ux-design.md
docs/specs/repo-management-ux/phases-pending/phase-1-tui-foundation/: README.md
docs/specs/repo-management-ux/phases-pending/phase-2-interactive-features/: README.md
docs/specs/repo-management-ux/phases-pending/phase-3-performance-ux/: README.md
docs/specs/repo-management-ux/proposals/: README.md  mgit-elysiactl-integration-protocol.md
docs/specs/source-code-indexing/: index-sync-specification.md  sync-architecture.md
docs/specs/source-code-indexing/phases-done/: phase-2-extract-configuration.md  phase-3-smart-content-resolution.md  phase-4-production-error-handling.md
docs/specs/source-code-indexing/phases-pending/: phase-6-integration-testing-suite.md
kb/: Struggle To Use Playwright MCP With Textual Serve.md  how-to-access-crush-logs.md  latest-features-textual-rich-typer.md  qdrant-storage-guide.md  research-development-workflow-tools.md  rich-text-formatting.md  textual-core-concepts.md  textual-design-patterns.md  textual-devtools-debugging.md  textual-devtools-guide.md  textual-devtools.md  textual-rich-typer-contextual-learning.md  textual-widget-patterns.md  theming-with-rich-and-textual.md
scripts/: performance_report.py  run_integration_tests.sh
specs/: cluster-verification.md
src/elysiactl/: __init__.py  __main__.py  cli.py  config.py
src/elysiactl/commands/: __init__.py  collection.py  health.py  index.py  repair.py  repo.py  start.py  status.py  stop.py
src/elysiactl/config/: __init__.py  collection_config.yaml  settings.py  settings.yaml
src/elysiactl/services/: __init__.py  backup_restore.py  cluster_verification.py  content_resolver.py  elysia.py  embedding.py  error_handling.py  performance.py  repository.py  sync.py  weaviate.py  weaviate_collections.py
src/elysiactl/tui/: CRUSH.md  __init__.py  app.py  command_processor.py  theme.py  theme_editor.py  theme_manager.py
src/elysiactl/tui/widgets/: __init__.py  command_prompt.py  custom_footer.py  handlers.py  repository_table.py  virtual_scrollable.py
src/elysiactl/utils/: __init__.py  display.py  process.py  storage.py
tests/: test_backup_restore.py  test_collection_management.py
tests/integration/: test_performance_benchmarks.py  test_scenarios.py  test_sync_pipeline.py
